src/main/default/objects/lightngcarousel__SS_Carousel_Slide__c/lightngcarousel__SS_Carousel_Slide__c.object-meta.xml
<CustomObject>
    <description>Carousel Slide</description>
    <label>Carousel Slide</label>
    <nameField>
        <displayFormat>CSLIDE-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carousel Slides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>