src/main/default/objects/lightngcarousel__SS_Carousel_Slide__c/fields/lightngcarousel__Autoplay__c.field-meta.xml
<CustomField>
    <fullName>lightngcarousel__Autoplay__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto Play</label>
    <type>Checkbox</type>
</CustomField>