src/main/default/objects/lightngcarousel__SS_Carousel_Slide__c/fields/lightngcarousel__Button_Label__c.field-meta.xml
<CustomField>
    <fullName>lightngcarousel__Button_Label__c</fullName>
    <inlineHelpText>Short text for call-to-action button.</inlineHelpText>
    <label>Button Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>