src/main/default/objects/lightngcarousel__SS_Carousel_Slide__c/fields/lightngcarousel__Carousel__c.field-meta.xml
<CustomField>
    <fullName>lightngcarousel__Carousel__c</fullName>
    <label>Carousel</label>
    <referenceTo>lightngcarousel__SS_Carousel__c</referenceTo>
    <relationshipLabel>Carousel Slides</relationshipLabel>
    <relationshipName>Carousel_Slides</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>