src/main/default/objects/lightngcarousel__SS_Carousel_Slide__c/fields/lightngcarousel__Description__c.field-meta.xml
<CustomField>
    <fullName>lightngcarousel__Description__c</fullName>
    <inlineHelpText>Add an enticing summary of your content.</inlineHelpText>
    <label>Body(Html tags allowed)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>