src/main/default/objects/lightngcarousel__SS_Carousel_Slide__c/fields/lightngcarousel__Description_Size__c.field-meta.xml
<CustomField>
    <fullName>lightngcarousel__Description_Size__c</fullName>
    <description>Choose an appropriate Body text size.</description>
    <inlineHelpText>Choose an appropriate Body text size.</inlineHelpText>
    <label>Body Text Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>regular</fullName>
                <default>true</default>
                <label>regular</label>
            </value>
            <value>
                <fullName>small</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>