src/main/default/objects/lightngcarousel__SS_Carousel_Slide__c/fields/lightngcarousel__Description_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>lightngcarousel__Description_Text_Color__c</fullName>
    <defaultValue>&quot;#000&quot;</defaultValue>
    <inlineHelpText>Description text supports Hex or RGB color codes.</inlineHelpText>
    <label>Body Text Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>