src/main/default/objects/lightngcarousel__SS_Carousel_Slide__c/fields/lightngcarousel__Height__c.field-meta.xml
<CustomField>
    <fullName>lightngcarousel__Height__c</fullName>
    <defaultValue>300</defaultValue>
    <label>Height (In Px)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>