src/main/default/objects/lightngcarousel__SS_Carousel_Slide__c/fields/lightngcarousel__Image_URL__c.field-meta.xml
<CustomField>
    <fullName>lightngcarousel__Image_URL__c</fullName>
    <inlineHelpText>Add an image URL. Must start with http:// or https:// for external pages. Go to Setup -&gt; Trusted URLs to make sure the URL is allowed by your organization.</inlineHelpText>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>