src/main/default/objects/lightngcarousel__SS_Carousel_Slide__c/fields/lightngcarousel__Loop_Video__c.field-meta.xml
<CustomField>
    <fullName>lightngcarousel__Loop_Video__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Loop Video</label>
    <type>Checkbox</type>
</CustomField>