src/main/default/objects/lightngcarousel__SS_Carousel_Slide__c/fields/lightngcarousel__Raw_MP4_Video_URL__c.field-meta.xml
<CustomField>
    <fullName>lightngcarousel__Raw_MP4_Video_URL__c</fullName>
    <description>Raw MP4 Video URL</description>
    <inlineHelpText>Raw MP4 Video URL</inlineHelpText>
    <label>Raw MP4 Video URL</label>
    <type>Url</type>
</CustomField>