src/main/default/objects/lightngcarousel__SS_Carousel_Slide__c/fields/lightngcarousel__Show_Video_Controls__c.field-meta.xml
<CustomField>
    <fullName>lightngcarousel__Show_Video_Controls__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show Video Controls - Play, Pause etc</description>
    <inlineHelpText>Show Video Controls - Play, Pause etc</inlineHelpText>
    <label>Show Video Controls</label>
    <type>Checkbox</type>
</CustomField>