src/main/default/objects/lightngcarousel__SS_Carousel_Slide__c/fields/lightngcarousel__Slide_Order__c.field-meta.xml
<CustomField>
    <fullName>lightngcarousel__Slide_Order__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Prioritize slides in numerical order (Ie. 1, 2, 3).</inlineHelpText>
    <label>Slide Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>