src/main/default/objects/lightngcarousel__SS_Carousel_Slide__c/fields/lightngcarousel__Text_Height__c.field-meta.xml
<CustomField>
    <fullName>lightngcarousel__Text_Height__c</fullName>
    <defaultValue>150</defaultValue>
    <description>Caption: Height(Not applicable for overlay position. In Px)</description>
    <inlineHelpText>Caption: Height(Not applicable for overlay position. In Px)</inlineHelpText>
    <label>Caption Height in px.(Not for overlay)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>