src/main/default/objects/lightngcarousel__SS_Carousel_Slide__c/fields/lightngcarousel__Text_Overlay_Background__c.field-meta.xml
<CustomField>
    <fullName>lightngcarousel__Text_Overlay_Background__c</fullName>
    <defaultValue>&quot;rgba(0,0,0,0.4)&quot;</defaultValue>
    <inlineHelpText>Opacity of overlay background controlled by RGBA color values.</inlineHelpText>
    <label>Caption Background</label>
    <length>20</length>
    <type>Text</type>
</CustomField>