src/main/default/objects/lightngcarousel__SS_Carousel_Slide__c/fields/lightngcarousel__Title__c.field-meta.xml
<CustomField>
    <fullName>lightngcarousel__Title__c</fullName>
    <description>Title</description>
    <inlineHelpText>Craft a short attention-grabbing banner title.</inlineHelpText>
    <label>Title(Html tags allowed)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>