src/main/default/objects/lightngcarousel__SS_Carousel_Slide__c/fields/lightngcarousel__Title_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>lightngcarousel__Title_Text_Color__c</fullName>
    <defaultValue>&quot;#000&quot;</defaultValue>
    <inlineHelpText>Banner title text supports Hex color codes.</inlineHelpText>
    <label>Title Text Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>