src/main/default/objects/lightngcarousel__SS_Carousel_Slide__c/fields/lightngcarousel__Title_Text_Size__c.field-meta.xml
<CustomField>
    <fullName>lightngcarousel__Title_Text_Size__c</fullName>
    <inlineHelpText>Choose an appropriate banner title size.</inlineHelpText>
    <label>Title Text Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>large</fullName>
                <default>true</default>
                <label>large</label>
            </value>
            <value>
                <fullName>medium</fullName>
            </value>
            <value>
                <fullName>small</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>