src/main/default/objects/lightngcarousel__SS_Carousel_Slide__c/recordTypes/lightngcarousel__image.recordType-meta.xml
<RecordType>
    <fullName>lightngcarousel__image</fullName>
    <active>true</active>
    <description>Image Banner</description>
    <label>Image</label>
</RecordType>