src/main/default/objects/lightngcarousel__SS_Carousel_Slide__c/recordTypes/lightngcarousel__video.recordType-meta.xml
<RecordType>
    <fullName>lightngcarousel__video</fullName>
    <active>true</active>
    <description>Video Banner</description>
    <label>Video</label>
</RecordType>